# MultiScaleHW3

./: README.md  pyproject.toml
app/: __main__.py  graph.py  problems.py
output/one/: adj.csv  adj.tex
output/six/: adj.csv  adj.tex
output/two/: adj.csv  adj.tex
