[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Logan Reed <me@loganreed.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
scipy = "^1.14.1"
networkx = "^3.4.1"
matplotlib = "^3.9.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
